--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>Querencia</title>
   </head>
-  <body>
+  <body class="font-body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
